--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
     --btn: #3673fd;
 }
 
-# {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -36,4 +36,42 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+@media (max-width: 1536px) {
+    .container {
+        width: 1366px;
+    }
+}
+
+@media (max-width: 1366px) {
+    .container {
+        width: 1280px;
+    }
+}
+
+@media (max-width: 1280px) {
+    .container {
+        width: 1024px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .container {
+        width: 768px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 640px;
+    }
+}
+
+@media (max-width: 640px) {
+    .container {
+        width: 475px;
+    }
 }
