--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -3,3 +3,42 @@
     align-items: center;
     gap: 10px;
 }
+
+.logout {
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.menuButton,
+.mobieLinks {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .links {
+        display: none;
+    }
+
+    .menuButton {
+        display: block;
+        cursor: pointer;
+    }
+
+    .mobieLinks {
+        position: absolute;
+        top: 100px;
+        right: 0;
+        width: 50%;
+        height: calc(100vh - 100px);
+        /* background-color: var(--bg); */
+        background-color: rebeccapurple;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        overflow: hidden;
+        transition: height 0.5s ease-in-out;
+    }
+}
